fixing overflow x issue

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 body{
   --swiper-pagination-color: #EA6D27;
   background-color: #ffffff;
+  overflow-x: hidden;
   /* margin-right: 7%;
   margin-left: 7%; */
 }
